apps/adguard-home/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.79
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
          ports:
            - containerPort: 80
              name: webui
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 96Mi
          volumeMounts:
            - name: data-volume
              mountPath: /opt/adguardhome/work
              subPath: adguard-home/work
            - name: data-volume
              mountPath: /opt/adguardhome/conf
              subPath: adguard-home/conf
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
