apps/adguard-home/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
spec:
  selector:
    app: adguard-home
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
