apps/adguard-home/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: adguard.solveir.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-service
                port:
                  number: 80
  tls:
    - hosts:
        - adguard.solveir.icu
      secretName: adguard-home-tls
